--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.AZSearch.AZActivity"
-            android:launchMode="singleTop"/>
+        <activity android:name=".ui.EtiquetasSearch.EtiquetasActivity"></activity>
+        <activity
+            android:name=".ui.AZSearch.AZActivity"
+            android:launchMode="singleTop" />
         <activity android:name=".ui.Cantico.CanticoActivity" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
